# log8-office

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LOG8-ROADMAP.md  README.en.md  README.ja.md  README.md  SECURITY.md  SKILL.md  agent-invite-template.txt  office-agent-push.py  pyproject.toml  set_state.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
assets-gen/: README.md  build.py  gen_brand.py  gen_cats.py  gen_decor.py  gen_furniture.py  gen_office_bg.py  gen_scene.py  gen_star.py  pixelkit.py
assets-gen/themes/: default.json  forest.json  midnight.json  sakura.json
backend/: app.py  memo_utils.py  security_utils.py  store_utils.py
docs/: AGENT-INTEGRATION.md
frontend/: game.js  index.html  invite.html  join-office-skill.md  join.html
scripts/: gemini_image_generate.py  security_check.py  smoke_test.py
